--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       |
 
       <div class="spanish spanish_dot" tabindex="0" aria-hidden="false" role="button">
-        <a class="btn button-langbar" href="/es-US/lab/VAULT">Español</a>
+        <a class="btn button-langbar" href="/es-US/lab/VAULT">Espanol</a>
       </div>
 
     </div>
