--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
               <div class="row">
                 <div class="col-sm-12 col-md-8">
                   <div class="position-relative form-signin-input my-3 text-left">
-                    <p id="MainContent_Label1" class="form-signin-heading">Thank you for your interest in <span class="tealColor heavy">Track COVID at Home!</span> Researchers are planning this health study so they can learn about how COVID-19 spreads between people who live together. The Centers for Disease Control and Prevention (CDC) is sponsoring the study. Westat, a research company, is managing the study.</p>
+                    <p id="MainContent_Label1" class="form-signin-heading mb-2">Thank you for your interest in <span class="tealColor heavy">Track COVID at Home!</span> Researchers are planning this health study so they can learn about how COVID-19 spreads between people who live together. The Centers for Disease Control and Prevention (CDC) is sponsoring the study. Westat, a research company, is managing the study.</p>
                     <p class="form-signin-heading mb-2 mt-2">It is important to get information from the person who has a positive COVID-19 test and all of the people in their household. We want to know as soon as possible after being tested. To find out if you are eligible, click on Get Started. If you would like to learn more about this study, watch the <span data-toggle="modal" data-target="#videoModal"><span class="maroon">welcome video</span></span>, or go to About or FAQs.
                       <p class="form-signin-heading mb-2 mt-2">If you prefer to get information and answer questions in Spanish, please call 1-855-981-0720 to have study staff assist you.</p>
+                      <p class="form-signin-heading mt-2 mb-0" lang="es">Si prefiere obtener información y responder a preguntas en español, llame al 1-855-981-0720 para que el personal del estudio lo ayude.</p>
                     </div>
                   </div>
                   <div class="col-sm-12 col-md-4">
